syntax = "proto3";

package pl.stirling.protocols.http2.testing;

option go_package = "greetpb";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply);
  rpc SayHelloAgain(HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  // The number of greetings to return. Only used in streaming method.
  int32 count = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service Greeter2 {
  rpc SayHi(HelloRequest) returns (HelloReply);
  rpc SayHiAgain(HelloRequest) returns (HelloReply);
}

service StreamingGreeter {
  rpc SayHelloClientStreaming(stream HelloRequest) returns (HelloReply);
  rpc SayHelloServerStreaming(HelloRequest) returns (stream HelloReply);
  rpc SayHelloBidirStreaming(stream HelloRequest) returns (stream HelloReply);
}
